cluster/modules/ingress/chart/templates/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: portfolio
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  tls:
    - hosts:
        - eugen-bondarev.com
      secretName: tls
  rules:
    - host: eugen-bondarev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: metrics.eugen-bondarev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-expose-service
                port:
                  number: 80
    - host: pipelines.eugen-bondarev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-expose-service
                port:
                  number: 80
    - host: infrastructure.eugen-bondarev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infrastructure-overview
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infrastructure-overview
                port:
                  number: 80
